--- a/src/NotificationView/NotificationView.form
+++ b/src/NotificationView/NotificationView.form
@@ -24,18 +24,25 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="166" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jScrollPane1" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="408" max="32767" attributes="0"/>
               <Component id="homeButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="165" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="403" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="255" max="32767" attributes="0"/>
-              <Component id="homeButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="jScrollPane1" min="-2" pref="210" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="homeButton" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -49,5 +56,76 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="homeButtonActionPerformed"/>
       </Events>
     </Component>
+    <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+      <AuxValues>
+        <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+      </AuxValues>
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+      <SubComponents>
+        <Component class="javax.swing.JTable" name="jTable1">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="18" style="0"/>
+            </Property>
+            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
+              <Table columnCount="2" rowCount="15">
+                <Column editable="true" title="Notification" type="java.lang.Object">
+                  <Data value="Daily Notification to add your intake!"/>
+                  <Data value="Did you go grocery shopping? Check our recommendations!"/>
+                  <Data value="Daily notification to add your intake!"/>
+                  <Data value="Make sure your user settings are updated"/>
+                  <Data value="Daily notification to add your intake!"/>
+                  <Data value="Don&apos;t forget to add your mood!"/>
+                  <Data value="Did you go grocery shopping? Check our recommendations!"/>
+                  <Data value="Daily notification to add your intake!"/>
+                  <Data value="Daily notification to add your intake!"/>
+                  <Data value="Daily notification to add your intake!"/>
+                  <Data value="Have you checked your Intake Statistics lately?"/>
+                  <Data value="Did you go grocery shopping? Check our recommendations!"/>
+                  <Data value="Daily notification to add your intake!"/>
+                  <Data value="Daily notification to add your intake!"/>
+                  <Data value="Welcome to FoodMood!"/>
+                </Column>
+                <Column editable="true" title="Time" type="java.lang.Object">
+                  <Data value="11-11-17"/>
+                  <Data value="11-10-17"/>
+                  <Data value="11-10-17"/>
+                  <Data value="11-09-17"/>
+                  <Data value="11-09-17"/>
+                  <Data value="11-08-17"/>
+                  <Data value="11-08-17"/>
+                  <Data value="11-08-17"/>
+                  <Data value="11-07-17"/>
+                  <Data value="11-06-17"/>
+                  <Data value="11-05-17"/>
+                  <Data value="11-05-17"/>
+                  <Data value="11-05-17"/>
+                  <Data value="11-04-17"/>
+                  <Data value="11-04-17"/>
+                </Column>
+              </Table>
+            </Property>
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+              <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+              </TableColumnModel>
+            </Property>
+            <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+              <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
+            </Property>
+          </Properties>
+        </Component>
+      </SubComponents>
+    </Container>
   </SubComponents>
 </Form>
