files are being saved, but nothing written to them yet. Fixed the navigation of the application.

--- a/src/CrudMoodView/CrudMoodView.form
+++ b/src/CrudMoodView/CrudMoodView.form
@@ -65,7 +65,7 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="homeButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Home"/>
+        <Property name="text" type="java.lang.String" value="Menu"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="homeButtonActionPerformed"/>
