--- a/src/StatisticView/StatisticView.form
+++ b/src/StatisticView/StatisticView.form
@@ -34,7 +34,7 @@
                           <Component id="foodScrollPane" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="backButton" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="575" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="569" max="32767" attributes="0"/>
                           </Group>
                           <Component id="drinkScrollPane" alignment="0" max="32767" attributes="0"/>
                       </Group>
@@ -76,7 +76,7 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="backButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Back"/>
+        <Property name="text" type="java.lang.String" value="Menu"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backButtonActionPerformed"/>
